k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: the-agency
  labels:
    name: the-agency
    app: the-agency
