k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-agency
  namespace: the-agency
  labels:
    app: the-agency
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: the-agency
---
apiVersion: v1
kind: Service
metadata:
  name: the-agency-headless
  namespace: the-agency
  labels:
    app: the-agency
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: the-agency
